# githide

./: .flake8  .gitignore  githide.md  pyproject.toml  readme.md  setup.py
.github/workflows/: python-publish.yml
docs/: commands.md  features.md  implementation_plan.md
githide/: add_command.py  cli.py  init_command.py  list_command.py  remove_command.py  undo_command.py
test/: test_add_command.py  test_cli.py  test_init_command.py  test_list_command.py  test_remove_command.py  test_undo_command.py
