[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "githide"
version = "0.1.0"
description = "A simple tool to hide files in a git repository without adding them to .gitignore."
readme = "README.md"
requires-python = ">=3.12.2"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["click"]

[project.urls]
"Homepage" = "https://github.com/kyle-cassidy/githide"

[project.scripts]
githide = "githide.cli:main"

